2009-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/psxtransschedparam.c: Restructure to avoid untestable code
	being generated by switch.

2009-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/coremsgsubmit.c: Move impossible case inside an RTEMS_DEBUG
	conditional.

2009-07-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/Makefile.am, posix/src/mutex.c, posix/src/mutexinit.c: Add
	initial support for the pthread mutex type attribute added by UNIX98.
	It can be normal, recursive, errorcheck or default.
	* posix/src/mutexattrgettype.c, posix/src/mutexattrsettype.c: New files.

2009-07-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/src/taskinitusers.c: Restructure to eliminate dead check --
	loop will not be executed when 0 tasks. Also improved comments and
	eliminated a local variable.

2009-07-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/apiext.c: Unreachable API Extension paths marked as either
	unused or only with certain APIs.

2009-07-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* itron/src/task.c, posix/src/pthread.c, rtems/src/tasks.c,
	sapi/src/exinit.c, score/include/rtems/score/apiext.h,
	score/src/apiext.c: No APIs currently implemented use the
	predriver_hook so disable it until such time as it is used.

2009-07-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/sigtimedwait.c: Restructure to improve coverage. Improve
	comments.

2009-07-03	Daniel Hellstrom <daniel@gaisler.com>

	* sapi/src/exinit.c, score/include/rtems/score/objectmp.h,
	score/src/objectmp.c: Ensure local node number is set early enough in
	MP configurations.

2009-07-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/coremsg.h, score/src/coremsgflushwait.c:
	Mark _CORE_message_queue_Flush_waiting_threads with
	FUNCTIONALITY_NOT_CURRENTLY_USED_BY_ANY_API since there is no way to
	reach it via an API.

2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>
