@@ -1,5 +1,10 @@
 2009-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>
 
+	* posix/src/mutexget.c: Restructure to improve ability to do coverage
+	analysis.
+
+2009-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>
+
 	* posix/src/psxtransschedparam.c: Restructure to avoid untestable code
 	being generated by switch.
 
